# libusbip-sys

./: .gitmodules  Cargo.toml  LICENSE  README.md  bindgen.rs  build.rs
config/linux/: wrapper.h
config/linux/usbip/: allowed_vars.txt
config/usbip/: allowed_types.txt  disallowed_types.txt
config/windows/: wrapper.h
src/: lib.rs
